# pokezira

./: .env  ADB.py  battle.py  data.py  favicon.json  main.css  main.py  pos.json  pyproject.toml  requirements.txt  sprites.py  storyline.py  user.db  util.py
templates/: explore.html  index.html  login.html  pokes.html  register.html  setup.html
templates/includes/: _navbar.html
templates/static/: explore.js  move.js  setup.css
