[tool.poetry]
name = "pokezira"
version = "0.1.0"
description = ""
authors = ["Artrix"]

[tool.poetry.dependencies]
python = "^3.7"
WTForms = "^2.2"
passlib = "^1.7"
flask = "^1.1"
flask-socketio = "^4.2"
pusher = "^2.1"
eventlet = "^0.25.1"
pokebase = "^1.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
